# jabbah

jabbah/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in
jabbah/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
jabbah/src/: Makefile.am  Makefile.in  auth.c  auth.h  iq.c  iq.h  jabbah.c  jabbah.h  message.c  message.h  namespace.c  node.c  node.h  presence.c  presence.h  roster.c  roster.h  sha1.c  sha1.h  test.c  version.c  version.h
