dnl  jabbah - Jabber library for clients
dnl
dnl  Copyright (C) 2005 bazyl
dnl  
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; version 2.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software Foundation,
dnl  Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  


AC_INIT(jabbah, 0.1)
AC_CONFIG_SRCDIR(src/jabbah.c)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AM_PROG_LIBTOOL

dnl AM_PATH_EXPAT

dnl Checks for libraries.
AC_SEARCH_LIBS(socket, socket)
AC_SEARCH_LIBS(gethostbyname, nsl)


dnl
dnl Checks for header files.
dnl
AC_CHECK_HEADERS(pthread.h expat.h)




AC_OUTPUT(Makefile \
	  src/Makefile)

