dnl  jabbah - Jabber library for clients
dnl
dnl  Copyright (C) 2005 bazyl
dnl  
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; version 2.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software Foundation,
dnl  Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  


AC_INIT(jabbah, 0.1)
AC_CONFIG_SRCDIR(src/jabbah.c)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for libraries.
AC_SEARCH_LIBS(socket, socket)
AC_SEARCH_LIBS(gethostbyname, nsl)


dnl
dnl Checks for header files.
dnl
AC_CHECK_HEADERS(pthread.h)

  AM_CONDITIONAL(EXPAT_INSTALLED, test [ $with_expat != no ])

  EXPAT_CFLAGS=
  EXPAT_LIBS=
  if test [ $with_expat != no ]; then
    if test [ $with_expat != yes ]; then
      EXPAT_CFLAGS="-I$with_expat/include"
      EXPAT_LIBS="-L$with_expat/lib"
    fi
    AC_CHECK_LIB(expat, XML_ParserCreate,
	            [ EXPAT_LIBS="$EXPAT_LIBS -lexpat"
	            expat_found=yes ],
  	            [ expat_found=no ],
		    "$EXPAT_LIBS")
    if test [ $expat_found = no ]; then
      AC_MSG_ERROR([Could not find the Expat library])
    fi
    expat_save_CFLAGS="$CFLAGS"
    CFLAGS="$CFLAGS $EXPAT_CFLAGS"
    AC_CHECK_HEADERS(expat.h, , expat_found=no)
    if test [ $expat_found = no ]; then
      AC_MSG_ERROR([Could not find expat.h])
    fi
    CFLAGS="$expat_save_CFLAGS"
  fi

  AC_SUBST(EXPAT_CFLAGS)
  AC_SUBST(EXPAT_LIBS)



AC_OUTPUT(Makefile \
	  src/Makefile)

