dnl  jabbah - Jabber library for clients
dnl
dnl  Copyright (C) 2005 bazyl
dnl  
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; version 2.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software Foundation,
dnl  Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  


AC_INIT([jabbah],[0.1.1])
AC_CONFIG_SRCDIR(src/jabbah.c)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AM_PROG_LIBTOOL

dnl Code specific 
AC_C_CONST
AC_TYPE_SIZE_T

dnl Check default libraries
AC_CHECK_LIB( [crypto], [EVP_DigestUpdate],,[AC_MSG_ERROR([Sorry, we need openssl crypto...])])

dnl
dnl Checks for default header files.
dnl
AC_CHECK_HEADERS([pthread.h expat.h netinet/in.h netdb.h sys/socket.h])

dnl Checks for default functions
AC_CHECK_FUNCS([gethostbyname socket strerror strstr uname])

dnl --enable params
AC_MSG_CHECKING(--enable-ssl argument)
AC_ARG_ENABLE(ssl, 
    [  --enable-ssl		  Enable ssl support [[default=yes]]],
    [enable_ssl=$enableval],
    [enable_ssl="yes"])
AC_MSG_RESULT($enable_ssl)

if test "$enable_ssl" = "yes"; then
  AC_CHECK_LIB( [ssl], [SSL_free],, [AC_MSG_ERROR([Sorry, we need openssl for ssl support...])])
  AC_CHECK_HEADERS([openssl/ssl.h openssl/evp.h],, [AC_MSG_ERROR([Sorry, we need openssl for ssl support...])])
  AC_DEFINE(HAVE_SSL,1,[Define to 1 if you have openssl])
fi

dnl the output
AC_CONFIG_FILES([Makefile \
	  src/Makefile])
AC_OUTPUT

